// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query and renders query with multiple features anded together 1`] = `
@media (color-gamut: srgb) and (min-width: 25em) and (orientation: landscape) and (grid) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query and renders query with two features anded together 1`] = `
@media (min-width: 25em) and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query mixed allows mixed not queries (both and and or) 1`] = `
@media not screen and (display-mode: fullscreen), not screen and (color-gamut: rec2020), not screen and (grid: 0) and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query mixed allows mixed queries (both and and or) 1`] = `
@media (display-mode: fullscreen),(color-gamut: rec2020),(display-mode: standalone) and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query mixed allows mixed queries and not queries (both and and or) 1`] = `
@media (grid),(color-gamut: rec2020),(grid: 1) and (orientation: landscape),not screen and (grid), not screen and (width: 68.75em) and (orientation: portrait) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query not negates anded queries 1`] = `
@media not screen and (display-mode: fullscreen) and (color-gamut: p3) and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query not negates ored queries 1`] = `
@media not screen and (display-mode: fullscreen), not screen and (color-gamut: p3), not screen and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query not throws with a nested array 1`] = `You must not supply any nested arrays as part of a query but you supplied ''.`;

exports[`query not throws with invalid argument of '[object Object]' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '[object Object]'.`;

exports[`query not throws with invalid argument of '-0.4' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-0.4'.`;

exports[`query not throws with invalid argument of '-6' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-6'.`;

exports[`query not throws with invalid argument of '-90' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-90'.`;

exports[`query not throws with invalid argument of '-99.8' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-99.8'.`;

exports[`query not throws with invalid argument of '0' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '0'.`;

exports[`query not throws with invalid argument of '0.6' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '0.6'.`;

exports[`query not throws with invalid argument of '44.7' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '44.7'.`;

exports[`query not throws with invalid argument of '78' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '78'.`;

exports[`query not throws with invalid argument of '4999' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '4999'.`;

exports[`query not throws with invalid argument of 'NaN' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'NaN'.`;

exports[`query not throws with invalid argument of 'false' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'false'.`;

exports[`query not throws with invalid argument of 'null' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'null'.`;

exports[`query not throws with invalid argument of 'true' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'true'.`;

exports[`query not throws with invalid argument of 'undefined' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'undefined'.`;

exports[`query not throws with invalid child of '[object Object]' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[{}]'.`;

exports[`query not throws with invalid child of '-0.4' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-0.4]'.`;

exports[`query not throws with invalid child of '-6' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-6]'.`;

exports[`query not throws with invalid child of '-90' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-90]'.`;

exports[`query not throws with invalid child of '-99.8' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-99.8]'.`;

exports[`query not throws with invalid child of '0' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[0]'.`;

exports[`query not throws with invalid child of '0.6' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[0.6]'.`;

exports[`query not throws with invalid child of '44.7' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[44.7]'.`;

exports[`query not throws with invalid child of '78' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[78]'.`;

exports[`query not throws with invalid child of '4999' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[4999]'.`;

exports[`query not throws with invalid child of 'NaN' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[null]'.`;

exports[`query not throws with invalid child of 'false' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[false]'.`;

exports[`query not throws with invalid child of 'null' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[null]'.`;

exports[`query not throws with invalid child of 'true' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[true]'.`;

exports[`query not throws with invalid child of 'undefined' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[null]'.`;

exports[`query not throws with no arguments 1`] = `You must supply at least one argument to 'not()' to build a valid media query.`;

exports[`query not with media type negates anded queries without adding default media type 1`] = `
@media not screen and (display-mode: fullscreen) and (color-gamut: p3) and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query not with media type negates ored queries without adding default media type 1`] = `
@media not screen, not screen and (display-mode: fullscreen), not screen and (color-gamut: p3), not screen and (orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query not with media type renders single uquery with media type without adding default media type 1`] = `
@media not screen, not screen and (display-mode: fullscreen) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query or renders query with multiple features ored together 1`] = `
@media (color-gamut: srgb),(min-width: 25em),(orientation: landscape),(grid) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query or renders query with two features ored together 1`] = `
@media (min-width: 25em),(orientation: landscape) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query renders query with single feature 1`] = `
@media (min-width: 25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`query throws with a nested array 1`] = `You must not supply any nested arrays as part of a query but you supplied ''.`;

exports[`query throws with invalid argument of '[object Object]' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '[object Object]'.`;

exports[`query throws with invalid argument of '-0.4' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-0.4'.`;

exports[`query throws with invalid argument of '-6' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-6'.`;

exports[`query throws with invalid argument of '-90' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-90'.`;

exports[`query throws with invalid argument of '-99.8' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '-99.8'.`;

exports[`query throws with invalid argument of '0' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '0'.`;

exports[`query throws with invalid argument of '0.6' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '0.6'.`;

exports[`query throws with invalid argument of '44.7' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '44.7'.`;

exports[`query throws with invalid argument of '78' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '78'.`;

exports[`query throws with invalid argument of '4999' 1`] = `You must only supply strings or arrays to 'query()' but you supplied '4999'.`;

exports[`query throws with invalid argument of 'NaN' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'NaN'.`;

exports[`query throws with invalid argument of 'false' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'false'.`;

exports[`query throws with invalid argument of 'null' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'null'.`;

exports[`query throws with invalid argument of 'true' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'true'.`;

exports[`query throws with invalid argument of 'undefined' 1`] = `You must only supply strings or arrays to 'query()' but you supplied 'undefined'.`;

exports[`query throws with invalid child of '[object Object]' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[{}]'.`;

exports[`query throws with invalid child of '-0.4' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-0.4]'.`;

exports[`query throws with invalid child of '-6' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-6]'.`;

exports[`query throws with invalid child of '-90' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-90]'.`;

exports[`query throws with invalid child of '-99.8' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[-99.8]'.`;

exports[`query throws with invalid child of '0' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[0]'.`;

exports[`query throws with invalid child of '0.6' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[0.6]'.`;

exports[`query throws with invalid child of '44.7' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[44.7]'.`;

exports[`query throws with invalid child of '78' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[78]'.`;

exports[`query throws with invalid child of '4999' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[4999]'.`;

exports[`query throws with invalid child of 'NaN' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[null]'.`;

exports[`query throws with invalid child of 'false' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[false]'.`;

exports[`query throws with invalid child of 'null' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[null]'.`;

exports[`query throws with invalid child of 'true' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[true]'.`;

exports[`query throws with invalid child of 'undefined' 1`] = `You must only supply strings or arrays as children of arrays passed in to 'query()' but you supplied '[null]'.`;

exports[`query throws with no arguments 1`] = `You must supply at least one argument to 'query()' to build a valid media query.`;
